--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary SEO -->
+    <title>NeoRural Development | Community-led rural development initiatives</title>
+    <meta
+      name="description"
+      content="NeoRural Development designs and scales community-led rural development initiatives that improve livelihoods, water security and village infrastructure."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="NeoRural Development | Community-led rural development initiatives" />
+    <meta
+      property="og:description"
+      content="Discover NeoRural Development’s community-led rural development initiatives transforming villages through water, livelihoods and climate-resilient infrastructure."
+    />
+    <meta property="og:image" content="/logo.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="NeoRural Development | Community-led rural development initiatives" />
+    <meta
+      name="twitter:description"
+      content="Follow NeoRural Development’s community-led rural development initiatives driving lasting impact in rural communities."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     <link rel="shortcut icon" type="image/png" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeoRural Development</title>
   </head>
   <body>
     <div id="app"></div>
