--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     />
     <meta name="twitter:image" content="/logo.png" />
 
+    <!-- Performance: Preconnect to critical origins -->
+    <link rel="preconnect" href="https://www.transparenttextures.com" />
+    <link rel="dns-prefetch" href="https://www.transparenttextures.com" />
+    <link rel="preconnect" href="https://images.unsplash.com" />
     <!-- Fonts: non-blocking Google Fonts load -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
