--- a/index.html
+++ b/index.html
@@ -28,23 +28,19 @@
     />
     <meta name="twitter:image" content="/logo.png" />
 
-    <!-- Performance: Preconnect to critical origins -->
-    <link rel="preconnect" href="https://www.transparenttextures.com" />
-    <link rel="dns-prefetch" href="https://www.transparenttextures.com" />
-    <link rel="preconnect" href="https://images.unsplash.com" />
     <!-- Fonts: non-blocking Google Fonts load -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=optional"
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
       media="print"
       onload="this.media='all'"
     />
     <noscript>
       <link
         rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=optional"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
       />
     </noscript>
 
