--- a/index.html
+++ b/index.html
@@ -4,30 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary SEO -->
-    <title>NeoRural Development | Community-led rural development initiatives</title>
+    <title>NeoRural Development | Community-Led Rural Development Initiatives for Sustainable Village Transformation</title>
     <meta
       name="description"
-      content="NeoRural Development designs and scales community-led rural development initiatives that improve livelihoods, water security and village infrastructure."
+      content="NeoRural Development designs and scales community-led rural development initiatives that improve livelihoods, water security, and village infrastructure. Partner with us for sustainable village transformation programs, water security solutions for rural communities, and climate-resilient village infrastructure development."
     />
+    <meta
+      name="keywords"
+      content="community-led rural development initiatives for sustainable village transformation, water security solutions for rural communities in India, climate-resilient village infrastructure development programs, participatory rural development approach for village transformation, sustainable agriculture development programs in rural villages, rural livelihood improvement programs through community participation, village water management systems for water security, regenerative village development models for sustainable transformation, community-based rural transformation programs, rural digital infrastructure development for village connectivity, how to partner with rural development NGO for village transformation, water security solutions for rural communities implementation, village water management systems design and implementation, sustainable agriculture development programs in villages, rural digital infrastructure development projects, climate smart agriculture programs for rural communities, village digital commons for rural connectivity, resilient water networks for village water security, measurable outcomes from community-led rural development programs, village development program impact metrics and results, real-world examples of sustainable village transformation, community-led rural development success stories from India, CSR partnerships for sustainable village development programs, funding opportunities for rural development initiatives, insights on community-led village transformation programs, best practices for sustainable rural development"
+    />
+    <meta name="author" content="NeoRural Development" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <link rel="canonical" href="https://neorural.dev" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="NeoRural Development | Community-led rural development initiatives" />
+    <meta property="og:url" content="https://neorural.dev" />
+    <meta property="og:title" content="NeoRural Development | Community-Led Rural Development Initiatives for Sustainable Village Transformation" />
     <meta
       property="og:description"
-      content="Discover NeoRural Development’s community-led rural development initiatives transforming villages through water, livelihoods and climate-resilient infrastructure."
+      content="Discover NeoRural Development's community-led rural development initiatives transforming villages through sustainable water security solutions, climate-resilient infrastructure, and participatory rural development programs."
     />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="https://neorural.dev/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="NeoRural Development" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="NeoRural Development | Community-led rural development initiatives" />
+    <meta name="twitter:title" content="NeoRural Development | Community-Led Rural Development Initiatives" />
     <meta
       name="twitter:description"
-      content="Follow NeoRural Development’s community-led rural development initiatives driving lasting impact in rural communities."
+      content="Partner with NeoRural Development for sustainable village transformation programs, water security solutions, and climate-resilient rural infrastructure development."
     />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="https://neorural.dev/logo.png" />
+    <meta name="twitter:site" content="@neoruraldev" />
+    <meta name="twitter:creator" content="@neoruraldev" />
 
+    <!-- Performance: Resource Hints -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="https://images.unsplash.com" />
+    
     <!-- Fonts: non-blocking Google Fonts load -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,6 +62,9 @@
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
       />
     </noscript>
+    
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/logo.png" as="image" type="image/png" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
