--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <!-- Fonts: non-blocking Google Fonts load with font-display swap -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Performance: Load fonts asynchronously -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
@@ -63,14 +64,39 @@
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
       />
     </noscript>
+    <!-- Performance: Preload font files for faster rendering -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/spacegrotesk/v16/V8mQoQjQSkFtoMM3T6r8E7mPbF4Cw.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
+      />
+    </noscript>
     
-    <!-- Preload critical resources -->
-    <link rel="preload" href="/logo.png" as="image" type="image/png" />
+    <!-- Preload critical resources for LCP -->
+    <link rel="preload" href="/logo.png" as="image" type="image/png" fetchpriority="high" />
+    <link rel="preload" href="/src/assets/main.css" as="style" />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" as="style" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     <link rel="shortcut icon" type="image/png" href="/logo.png" />
+    
+    <!-- Performance: Inline critical CSS for faster FCP -->
+    <style>
+      /* Critical CSS - Above the fold styles */
+      :root{font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;color-scheme:dark;--bg:#030712;--surface:#071426;--panel:#0f2136;--outline:rgba(255,255,255,0.12);--accent:#74f5d5;--accent-soft:rgba(116,245,213,0.18);--accent-alt:#b8ff6e;--text:#f8f5f1;--muted:#99a9bd;--shadow:0 30px 80px rgba(3,6,12,0.65);--radius-xl:40px}
+      *,*::before,*::after{box-sizing:border-box}
+      body{margin:0;min-height:100vh;background:radial-gradient(circle at 10% 20%,rgba(116,245,213,0.25),transparent 55%) no-repeat,radial-gradient(circle at 80% 0%,rgba(184,255,110,0.35),transparent 50%) no-repeat,radial-gradient(circle at 50% 50%,rgba(62,106,255,0.15),transparent 60%) no-repeat,var(--bg);color:var(--text);line-height:1.6;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;text-rendering:optimizeLegibility}
+      .site-shell{position:relative;max-width:1584px;margin:0 auto;padding:0 1.5rem 3rem}
+      .site-header{position:sticky;top:0.75rem;display:flex;align-items:center;justify-content:space-between;padding:0.9rem 1.25rem;border-radius:999px;z-index:20;backdrop-filter:blur(18px);background:rgba(7,13,22,0.8);border:1px solid rgba(255,255,255,0.08);box-shadow:0 20px 60px rgba(0,0,0,0.45);contain:layout style paint;transform:translateZ(0)}
+      .logo{text-transform:uppercase;text-decoration:none;letter-spacing:0.18em;font-weight:700;color:var(--text);display:inline-flex;align-items:center;gap:0.65rem;font-size:1rem;padding-left:0.4rem;padding-right:0.4rem}
+      .logo-mark{width:50px;height:50px;border-radius:50%;border:1px solid rgba(255,255,255,0.12);box-shadow:0 8px 22px rgba(0,0,0,0.45);object-fit:cover;display:block}
+      .page{padding:3.5rem 0 0;min-height:calc(100vh - 120px);transform:translateZ(0)}
+      img{max-width:100%;display:block;height:auto}
+    </style>
   </head>
   <body>
     <div id="app"></div>
