--- a/index.html
+++ b/index.html
@@ -67,17 +67,22 @@
     <!-- Performance: Preload font files for faster rendering -->
     <link rel="preload" href="https://fonts.gstatic.com/s/spacegrotesk/v16/V8mQoQjQSkFtoMM3T6r8E7mPbF4Cw.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
-      />
-    </noscript>
     
     <!-- Preload critical resources for LCP -->
     <link rel="preload" href="/logo.png" as="image" type="image/png" fetchpriority="high" />
-    <link rel="preload" href="/src/assets/main.css" as="style" />
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" as="style" />
+    
+    <!-- Performance: Defer non-critical CSS loading -->
+    <script>
+      // Defer CSS loading to prevent render blocking
+      window.addEventListener('load', function() {
+        const links = document.querySelectorAll('link[rel="stylesheet"]:not([media="print"])');
+        links.forEach(link => {
+          if (link.href && link.href.includes('.css') && !link.href.includes('fonts.googleapis.com')) {
+            link.media = 'all';
+          }
+        });
+      });
+    </script>
 
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
@@ -94,8 +99,12 @@
       .site-header{position:sticky;top:0.75rem;display:flex;align-items:center;justify-content:space-between;padding:0.9rem 1.25rem;border-radius:999px;z-index:20;backdrop-filter:blur(18px);background:rgba(7,13,22,0.8);border:1px solid rgba(255,255,255,0.08);box-shadow:0 20px 60px rgba(0,0,0,0.45);contain:layout style paint;transform:translateZ(0)}
       .logo{text-transform:uppercase;text-decoration:none;letter-spacing:0.18em;font-weight:700;color:var(--text);display:inline-flex;align-items:center;gap:0.65rem;font-size:1rem;padding-left:0.4rem;padding-right:0.4rem}
       .logo-mark{width:50px;height:50px;border-radius:50%;border:1px solid rgba(255,255,255,0.12);box-shadow:0 8px 22px rgba(0,0,0,0.45);object-fit:cover;display:block}
+      .logo-text{display:flex;flex-direction:column;line-height:1.2;min-height:1.2em;font-size:1rem;font-weight:700}
       .page{padding:3.5rem 0 0;min-height:calc(100vh - 120px);transform:translateZ(0)}
       img{max-width:100%;display:block;height:auto}
+      /* Performance: Reserve space for footer to prevent layout shift */
+      .site-footer{padding:4rem 0 2rem;margin-top:4rem;position:relative;min-height:400px;contain:layout style}
+      .footer-brand-text{margin-top:1rem;min-height:80px}
     </style>
   </head>
   <body>
