--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     <link rel="dns-prefetch" href="https://images.unsplash.com" />
     <!-- Performance: Preconnect to main domain for faster asset loading -->
-    <link rel="preconnect" href="https://jigomit-neorural-development.netlify.app" />
+    <link rel="preconnect" href="https://jigomit-neorural-development.netlify.app" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://images.unsplash.com" crossorigin />
+    <!-- Performance: Defer Unsplash images - no preconnect to reduce initial connections -->
     
     <!-- Performance: Load fonts asynchronously -->
     <link
@@ -153,7 +153,10 @@
       .footer-contact-info{min-height:60px;box-sizing:border-box}
       .footer-social-links{min-height:80px;box-sizing:border-box}
       .footer-copyright{min-height:1.5em;line-height:1.5;box-sizing:border-box}
-      .footer-logo{width:56px;height:56px;aspect-ratio:1/1;box-sizing:border-box;display:block;background-color:rgba(255,255,255,0.05)}
+      .footer-logo{width:56px;height:56px;aspect-ratio:1/1;box-sizing:border-box;display:block;background-color:rgba(255,255,255,0.05);object-fit:cover}
+      /* Performance: Prevent footer from being LCP element */
+      .site-footer{content-visibility:auto;contain-intrinsic-size:auto 500px}
+      .footer-brand-text p{content-visibility:auto;contain-intrinsic-size:auto 2.8em}
     </style>
   </head>
   <body>
