--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <!-- Primary SEO -->
     <title>NeoRural Development | Community-Led Rural Development Initiatives for Sustainable Village Transformation</title>
     <meta
@@ -64,9 +64,7 @@
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Inter:wght@400;500;600&display=swap"
       />
     </noscript>
-    <!-- Performance: Preload font files for faster rendering -->
-    <link rel="preload" href="https://fonts.gstatic.com/s/spacegrotesk/v16/V8mQoQjQSkFtoMM3T6r8E7mPbF4Cw.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- Performance: Font preloading handled by Google Fonts CSS - no manual preload needed -->
     
     <!-- Preload critical resources for LCP -->
     <link rel="preload" href="/logo.png" as="image" type="image/png" fetchpriority="high" />
