--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
       .footer-contact-info{min-height:60px;box-sizing:border-box}
       .footer-social-links{min-height:80px;box-sizing:border-box}
       .footer-copyright{min-height:1.5em;line-height:1.5;box-sizing:border-box}
-      .footer-logo{width:56px;height:56px;min-width:56px;min-height:56px;max-width:56px;max-height:56px;aspect-ratio:1/1;box-sizing:border-box;display:block;object-fit:cover;content-visibility:auto;position:absolute;top:0;left:0;opacity:0;transition:opacity 0.2s ease}
-      .footer-logo.loaded{opacity:1}
+      .footer-logo{width:56px;height:56px;min-width:56px;min-height:56px;max-width:56px;max-height:56px;aspect-ratio:1/1;box-sizing:border-box;display:block;object-fit:cover;content-visibility:auto;position:absolute;top:0;left:0;opacity:0;transition:opacity 0.2s ease;will-change:opacity}
+      .footer-logo.loaded{opacity:1;will-change:auto}
       .footer-logo-wrapper{width:56px;height:56px;min-width:56px;min-height:56px;max-width:56px;max-height:56px;flex-shrink:0;box-sizing:border-box;background-color:rgba(255,255,255,0.05);background-image:linear-gradient(135deg,rgba(116,245,213,0.1) 0%,rgba(184,255,110,0.1) 100%);border-radius:50%;display:block;contain:layout style paint;aspect-ratio:1/1;position:relative;overflow:hidden}
       /* Performance: Prevent footer from being LCP element */
       .site-footer{content-visibility:auto;contain-intrinsic-size:auto 500px}
