--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <!-- Performance: Preconnect to same origin FIRST (before any other resources) -->
-    <link rel="preconnect" href="https://jigomit-neorural-development.netlify.app" />
+    <!-- Preconnect to current origin for faster resource loading -->
+    <link rel="preconnect" href="https://jigomit-neorural-development.netlify.app" crossorigin="anonymous" />
     <link rel="dns-prefetch" href="https://jigomit-neorural-development.netlify.app" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -133,6 +134,7 @@
       .logo{text-transform:uppercase;text-decoration:none;letter-spacing:0.18em;font-weight:700;color:var(--text);display:inline-flex;align-items:center;gap:0.65rem;font-size:1rem;padding-left:0.4rem;padding-right:0.4rem}
       .logo-mark{width:50px;height:50px;border-radius:50%;border:1px solid rgba(255,255,255,0.12);box-shadow:0 8px 22px rgba(0,0,0,0.45);object-fit:cover;display:block}
       .logo-text{display:flex;flex-direction:column;line-height:1.2;min-height:1.2em;font-size:1rem;font-weight:700}
+      .hero-copy p{min-height:4.5em;line-height:1.6;box-sizing:border-box;font-display:swap;content-visibility:auto;contain-intrinsic-size:auto 4.5em;color:var(--muted);margin-bottom:1.25rem}
       .page{padding:3.5rem 0 0;min-height:calc(100vh - 120px);transform:translateZ(0)}
       img{max-width:100%;display:block;height:auto}
       /* Performance: Reserve exact space for footer to prevent layout shift */
